# syscord

./: .gitignore  Cargo.toml  PKGBUILD  README.md
.github/workflows/: release.yml
.rpm/: syscord.spec
snap/: snapcraft.yaml
src/: discord.rs  main.rs
