[package]
name = "syscord"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Display system status as Discord Rich Presence"
documentation = "https://docs.rs/syscord"
readme = "README.md"
homepage = "https://github.com/ewpratten/syscord"
repository = "https://github.com/ewpratten/syscord"
license = "GPL-3.0"
keywords = ["discord", "rich-presence"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33"
sysinfo = "0.19"
discord-sdk = "0.1"
tokio = { version = "1.9", features = ["rt", "macros"] }
ctrlc = "3.1"
colored = "2.0.0"
tracing = "0.1"
tracing-subscriber = "0.2"
byte-unit = "4.0"
chrono = "0.4"
os_type = "2.3"